# whl-puller

./: Cargo.toml
docker/: Dockerfile-build  Dockerfile-deploy
migrations/20170207223602_monuments/: down.sql  up.sql
migrations/20170222161035_licenses/: up.sql
migrations/20170223153537_pictures/: up.sql
migrations/20170228064439_last_updates/: down.sql  up.sql
src/: flickr_api.rs  main.rs  monument.rs  unesco_xml.rs
src/domain/: dao.rs  mod.rs
src/monument/: mod.rs
